--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site wide configuration
 
-title:            Ocu Kampar
+title:            Rona Rosita
 locale:           en_US
 #url:              http://localhost:4000
-url:              http://kampar.github.io
+url:              http://ronarosita.github.io
 
 
 # Jekyll configuration
@@ -27,21 +27,21 @@ kramdown:
 
 # Site owner
 owner:
-  name: Muhammad Jazman
+  name: Rona Rosita
   avatar: bio-photo.jpg
   bio: "Describe your self."
   email: 
   disqus-shortname: 
-  twitter: jazma101 #username
+  twitter: Rona Rosita #username
   facebook: deactivate.py #username
   google:
-    plus: kampar #username
+    plus: Pekanbaru #username
     analytics: 
     verify: 
     ad-client: 
     ad-slot: 
   bing-verify: 
-  github: kampar #username
+  github: Rona12 #username
   stackoverflow: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
